fixed spacing

--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -10,7 +10,7 @@
 
 .page-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
     min-height: 100vh
